[gd_scene load_steps=5 format=3 uid="uid://qh7qnm5nbd6v"]

[ext_resource type="Script" uid="uid://bhkautgt4ihw0" path="res://scripts/main_menu.gd" id="1_ekxnf"]
[ext_resource type="FontFile" uid="uid://bowvcgjw7deaj" path="res://fonts/typewriter.ttf" id="1_l6cm7"]

[sub_resource type="GDScript" id="GDScript_l6cm7"]

[sub_resource type="GDScript" id="GDScript_ekxnf"]
resource_name = "exit_game"

[node name="main_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ekxnf")

[node name="bg" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1148968, 0.11489681, 0.1148968, 1)

[node name="AspectRatioContainer3" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -243.0
offset_top = -196.5
offset_right = 243.0
offset_bottom = 196.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 40

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="AspectRatioContainer3"]
layout_mode = 2

[node name="title" type="Label" parent="AspectRatioContainer3/AspectRatioContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_l6cm7")
theme_override_font_sizes/font_size = 80
text = "dedektif
simülatör"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="AspectRatioContainer2" type="AspectRatioContainer" parent="AspectRatioContainer3"]
layout_mode = 2

[node name="button_container" type="VBoxContainer" parent="AspectRatioContainer3/AspectRatioContainer2"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8

[node name="button_continue" type="Button" parent="AspectRatioContainer3/AspectRatioContainer2/button_container"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("1_l6cm7")
theme_override_font_sizes/font_size = 30
text = "oyuna devam et"

[node name="button_new_game" type="Button" parent="AspectRatioContainer3/AspectRatioContainer2/button_container"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("1_l6cm7")
theme_override_font_sizes/font_size = 30
text = "yeni oyuna başla"

[node name="button_settings" type="Button" parent="AspectRatioContainer3/AspectRatioContainer2/button_container"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("1_l6cm7")
theme_override_font_sizes/font_size = 30
text = "ayarlar"
script = SubResource("GDScript_l6cm7")

[node name="button_exit" type="Button" parent="AspectRatioContainer3/AspectRatioContainer2/button_container"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("1_l6cm7")
theme_override_font_sizes/font_size = 30
text = "çıkış yap"
script = SubResource("GDScript_ekxnf")
